--- a/Services/Catalog/CourseApp.Service.Catalog/CourseApp.Service.Catalog.csproj
+++ b/Services/Catalog/CourseApp.Service.Catalog/CourseApp.Service.Catalog.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\CourseApp.Shared\CourseApp.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
