added photo service and client credentialtokenhandler

--- a/IdentityServer/CourseApp.IdentityServer/appsettings.json
+++ b/IdentityServer/CourseApp.IdentityServer/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=TSOFT-AKIN\\ALICEM;Database=identitydb;Trusted_Connection=true;"
+    "DefaultConnection": "Server=DESKTOP-4P8M84J\\ALICEMSSQLSERVER;Database=identitydb;Trusted_Connection=true;"
     //"DefaultConnection": "Server=localhost,1433;Database=identitydb;User=sa;Password=Akd.1234"
   }
 }
