--- a/Services/Order/CourseApp.Service.Order.API/appsettings.json
+++ b/Services/Order/CourseApp.Service.Order.API/appsettings.json
@@ -4,6 +4,7 @@
     //"DefaultConnection": "Server=localhost,1433;Database=identitydb;User=sa;Password=Akd.1234"
   },
   "IdentityServerURL": "http://localhost:5001",
+  "RabbitMQUrl": "localhost",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
